Closed
Bug 423212
Opened 18 years ago
Closed 17 years ago
###!!! ASSERTION: EndUpdateBatch without a begin: 'mBatchInProgress'
Categories
(Firefox :: Bookmarks & History, defect)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3
People
(Reporter: cbook, Assigned: dietrich)
References
Details
(Keywords: assertion)
Attachments
(2 files)
|
11.38 KB,
text/plain
|
Details | |
|
2.47 KB,
patch
|
asaf
:
review+
mconnor
:
approval1.9+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9b5pre) Gecko/2008031413 Minefield/3.0b5pre ID:2008031413 (Linux Debug Build on Fedora 8)
Steps to reproduce:
- Bookmarked some sets of tabs
- Go to the Places Libary
- Delete this set of tabs
--> Assertion
###!!! ASSERTION: EndUpdateBatch without a begin: 'mBatchInProgress', file /opt/debug/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp, line 2488
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x0005EA41]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x000558BF]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x0006A101]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x0007B2B3]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x0007144C]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x00072904]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libplaces.so +0x0007AE8F]
NS_InvokeByIndex_P+0x0000023B [./libxpcom_core.so +0x000D1919]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libxpconnect.so +0x0006953E]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libxpconnect.so +0x000782E4]
js_Invoke+0x00000BBD [./libmozjs.so +0x00098BA6]
UNKNOWN [./libmozjs.so +0x00089490]
js_Invoke+0x00000C36 [./libmozjs.so +0x00098C1F]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libxpconnect.so +0x0006227C]
UNKNOWN [/opt/debug/mozilla/firefox-debug/dist/bin/components/libxpconnect.so +0x00059C1D]
UNKNOWN [./libxpcom_core.so +0x000D2931]
UNKNOWN [./libxpcom_core.so +0x000D19AF]
| Assignee | ||
Comment 1•18 years ago
|
||
I'm not able to reproduce. The STR is ambiguous. Can you please provide a more details set of steps?
How many tabs? And do you mean you used the "Bookmark all tabs" option?
How did you delete the bookmarks? Did you select the folder and delete that, or did you select the group of bookmarks?
Comment 2•18 years ago
|
||
I see the same with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008040904 Minefield/3.0pre
The errors I see with my debug builds are multiple instances of:
###!!! ASSERTION: EndUpdateBatch without a begin: 'mBatchInProgress', file /Shared/Mozilla/Trunk/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp, line 2554
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp&rev=1.138&mark=2554৯
Steps to reproduce:
1. Press Cmd+D or star twice to open the bookmark contextual dialog
2. Add some tags
3. Remove a tag
While removing a tag the above assertion is listed multiple times within the console.
OS: Linux → All
Hardware: PC → All
| Assignee | ||
Comment 3•18 years ago
|
||
Henrik, a clarification please: When you say "Remove a tag", do you mean that you delete any tag in the tags field of the dialog? Do you get the assertion immediately, or after moving focus to a different control?
Comment 4•18 years ago
|
||
I only remove one of the given tags and have to move the focus to another control. But what I see now is, that I have forgotten a step. Please open the library in parallel and place it into the background before you remove one of the given tags. Then the assertion should be really visible to you.
| Reporter | ||
Comment 5•18 years ago
|
||
| Assignee | ||
Comment 6•18 years ago
|
||
See also bug 405551 for some discussion.
This patch removes the unnecessary batch update. It also changes an assertion to a warning (consistent w/ the other warning there), which allows the xpcshell in debug mode to complete correctly (what i was seeing here: https://bugzilla.mozilla.org/show_bug.cgi?id=405551#c7).
All tests pass with this patch.
Comment 7•17 years ago
|
||
Comment on attachment 316314 [details] [diff] [review]
fix
r=mano
Attachment #316314 -
Flags: review?(mano) → review+
| Assignee | ||
Comment 8•17 years ago
|
||
Comment on attachment 316314 [details] [diff] [review]
fix
drivers: very low risk patch, fixes assertions as well as removing an unnecessary transaction.
Attachment #316314 -
Flags: approval1.9?
Comment 9•17 years ago
|
||
Comment on attachment 316314 [details] [diff] [review]
fix
a=mconnor on behalf of 1.9 drivers
Attachment #316314 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 10•17 years ago
|
||
Checking in toolkit/components/places/src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v <-- nsNavBookmarks.cpp
new revision: 1.164; previous revision: 1.163
done
Checking in toolkit/components/places/src/nsNavHistoryResult.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp,v <-- nsNavHistoryResult.cpp
new revision: 1.143; previous revision: 1.142
done
Target Milestone: --- → Firefox 3
Comment 11•17 years ago
|
||
Dietrich, can we mark this bug as fixed?
| Reporter | ||
Comment 12•17 years ago
|
||
marking fixed, the patch has landed:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-04-25+16%3A40%3A00&maxdate=2008-04-25+16%3A41%3A06&cvsroot=%2Fcvsroot
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 13•17 years ago
|
||
verified fixed using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008042814 Firefox/3.0pre (Debug Build) - i don't see the assertion anymore, thx dietrich :)
Status: RESOLVED → VERIFIED
Comment 14•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•