Bug 423212 - ###!!! ASSERTION: EndUpdateBatch without a begin: 'mBatchInProgress' (r=mano, a=mconnor)